[package]
name = "orml-xtokens"
description = "Cross-chain token transfer."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/xtokens"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Acala Developers"]
edition = "2018"

[dependencies]
env_logger = "0.8.3"
log = { version = "0.4.14" }
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }

cumulus-primitives-core = { git = "https://github.com/zqhxuyuan/cumulus", branch = "tests_xcm", default-features = false }

xcm = { git = "https://github.com/zqhxuyuan/polkadot", branch = "tests_xcm", default-features = false }
xcm-executor = { git = "https://github.com/zqhxuyuan/polkadot", branch = "tests_xcm", default-features = false }

orml-xcm-support = { path = "../xcm-support", default-features = false }
orml-traits = { path = "../traits", default-features = false}

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }

# cumulus
cumulus-primitives-core = { git = "https://github.com/zqhxuyuan/cumulus", branch = "tests_xcm" }
cumulus-pallet-dmp-queue = { git = "https://github.com/zqhxuyuan/cumulus", branch = "tests_xcm" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/zqhxuyuan/cumulus", branch = "tests_xcm" }
cumulus-pallet-xcm = { git = "https://github.com/zqhxuyuan/cumulus", branch = "tests_xcm" }
parachain-info = { git = "https://github.com/zqhxuyuan/cumulus", branch = "tests_xcm" }

# polkadot
polkadot-parachain = { git = "https://github.com/zqhxuyuan/polkadot", branch = "tests_xcm" }
xcm = { git = "https://github.com/zqhxuyuan/polkadot", branch = "tests_xcm" }
xcm-executor = { git = "https://github.com/zqhxuyuan/polkadot", branch = "tests_xcm" }
xcm-builder = { git = "https://github.com/zqhxuyuan/polkadot", branch = "tests_xcm" }
pallet-xcm = { git = "https://github.com/zqhxuyuan/polkadot", branch = "tests_xcm" }
polkadot-runtime-parachains = { git = "https://github.com/zqhxuyuan/polkadot", branch = "tests_xcm" }
xcm-simulator = { git = "https://github.com/zqhxuyuan/polkadot", branch = "tests_xcm"}

orml-tokens = { path = "../tokens" }
orml-xcm = { path = "../xcm" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"cumulus-primitives-core/std",
	"xcm/std",
	"xcm-executor/std",
	"orml-xcm-support/std",
	"orml-traits/std",
]
try-runtime = ["frame-support/try-runtime"]
# Needed because of cargo feature pollution.
runtime-benchmarks = [
	"xcm-builder/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
]
